# MERCURE-Application

./: .gitignore  README.md
app-src/: .env.dist  database_router.py  keywords.sqlite3  pyproject.toml  requirements-dev.txt  requirements.txt
app-src/config/: asgi.py  settings.py  urls.py  wsgi.py
app-src/factiva_app/: apps.py  forms.py  langgraph_classifier.py  models.py  tests.py  urls.py  views.py
app-src/factiva_app/migrations/: 0001_initial.py
app-src/factiva_app/templates/: append_factiva.html  article_detail.html  classified_articles.html  classified_titles.html  factiva_results.html  reporting_articles.html  reporting_articles_results.html  show_factiva.html  upload_factiva.html  view_classified_articles.html
app-src/keywords_app/: apps.py  models.py  urls.py  views.py
app-src/keywords_app/migrations/: 0001_initial.py
app-src/keywords_app/templates/: list_keywords.html  upload_keywords.html
app-src/scripts/: insert_articles.py  insert_keywords.py
app-src/static/css/: styles.css
app-src/staticfiles/css/: styles.css
xld/shell/: install.sh  uninstall.sh
